--- a/.github/workflows/github-action-single-broker.yml
+++ b/.github/workflows/github-action-single-broker.yml
@@ -22,5 +22,5 @@ jobs:
       - name: Check go version
         run: go version      
       - name: Run test
-        run: go test . -v      
+        run: go test -v -run TestSingle      
       - run: echo "🍏 This job's status is ${{ job.status }}."
