--- a/.github/workflows/github-action-multiple-brokers.yml
+++ b/.github/workflows/github-action-multiple-brokers.yml
@@ -14,9 +14,9 @@ jobs:
       - name: Check if containers are up
         run: docker ps
       - name: List topics
-        run: docker exec -it kafka1 kafka-topics --bootstrap-server localhost:9092 --list
+        run: docker exec kafka1 kafka-topics --bootstrap-server localhost:9092 --list
       - name: Describe the topic
-        run: docker exec -it kafka1 kafka-topics --bootstrap-server localhost:9092 --describe --topic events
+        run: docker exec kafka1 kafka-topics --bootstrap-server localhost:9092 --describe --topic events
       - name: Check go version
         run: go version      
       - name: Run test
